--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,7 @@
  *= require_tree .
  *= require_self
  */
+
+@import url("foundation/scss/normalize.scss");
+@import url("foundation/scss/foundation.scss");
+@import url("font-awesome/scss/font-awesome.scss");
