--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,9 +11,6 @@
  * file per style scope.
  *
  *= require_tree .
+ *= require foundation_and_overrides
  *= require_self
  */
-
-@import url("foundation/scss/normalize.scss");
-@import url("foundation/scss/foundation.scss");
-@import url("font-awesome/scss/font-awesome.scss");
