--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,6 +1,7 @@
-.row
-  .large-12.columns.header-container
-    h1 Facebook Pages Fetcher
+.index-container ng-controller="FacebookPagesController"
+  .row
+    .large-12.columns.header-container
+      h1 Facebook Pages Fetcher
 
-= render "facebook_form"
-= render "facebook_pages_container"
+  = render "facebook_form"
+  = render "facebook_pages_container"
