--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,4 +1,4 @@
-.index-container ng-controller="FacebookPagesController"
+.index-container ng-controller="FacebookPagesController" ng-init="get_pages()"
   .row
     .large-12.columns.header-container
       h1 Facebook Pages Fetcher
