Changed styling for form

--- a/app/views/home/_facebook_form.html.slim
+++ b/app/views/home/_facebook_form.html.slim
@@ -1,5 +1,5 @@
 .row
-  form(ng-submit="submit_facebook_page()")
+  form#new_facebook_page(ng-submit="submit_facebook_page()")
     .large-6.columns.large-offset-2
       input#facebook_id(
         type="text"
