--- a/app/assets/stylesheets/landing_page.scss
+++ b/app/assets/stylesheets/landing_page.scss
@@ -1,3 +1,10 @@
 .header-container {
   text-align: center;
 }
+
+#new_facebook_page {
+  input#facebook_id {
+    margin-bottom: 1.25rem;
+    height: 51px;
+  }
+}
