--- a/app/assets/stylesheets/landing_page.scss
+++ b/app/assets/stylesheets/landing_page.scss
@@ -8,3 +8,10 @@
     height: 51px;
   }
 }
+
+#stored-pages-container  {
+  .facebook-page-item-container {
+    display: block;
+    img, h3 { display: inline-block; }
+  }
+}
