--- a/app/views/home/_facebook_pages_container.html.slim
+++ b/app/views/home/_facebook_pages_container.html.slim
@@ -1,6 +1,6 @@
 #stored-pages-container.row[ng-cloak]
-  .large-12.columns
-    .facebook-page ng-repeat="page in pages"
+  .large-10.columns.large-offset-2
+    .facebook-page-item-container ng-repeat="page in pages"
       img(ng-src="{{ page.profile_picture }}")
       h3
         | {{ page.name }}
