--- a/app/views/facebook/pages/show.html.slim
+++ b/app/views/facebook/pages/show.html.slim
@@ -1,7 +1,18 @@
-.show-page-container
+.show-page-container ng-controller="FacebookPagePostsController" ng-init="get_posts('#{params[:id]}')"
   .row
     .large-10.columns.large-offset-2.page-headline
-      = link_to "javascript:void(0)" do
-        = image_tag @page.profile_picture, class: "th"
+      = link_to "javascript:void(0)", class: "th" do
+        = image_tag @page.profile_picture
       h2 = @page.name
 
+  .row ng-repeat="post in posts"
+    .large-10.columns.large-offset-2.page-post
+      h4
+        | {{ post.from.name }}
+      .post-body
+        = link_to "javascript:void(0)", class: "th" do
+          img(ng-src="{{ post.picture }}" ng-show="post.picture")
+        p
+          | {{ post.message }}
+        small
+          | {{ post.created_time | timeAgo }}
