Replaced login links for navbar

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,6 @@ html
     = csrf_meta_tags
 
   body
-    = render "layouts/login_links"
+    = render "layouts/navbar"
     = render "layouts/flash_messages"
     = yield
