--- a/app/assets/stylesheets/landing_page.scss
+++ b/app/assets/stylesheets/landing_page.scss
@@ -1,5 +1,6 @@
 .header-container {
-  text-align: center;
+  padding: 100px 0px 100px 0px;
+  h1, h4, #facebook_login_button { text-align: center; }
 }
 
 #new_facebook_page {
