Refactored page views

--- a/app/views/home/_facebook_form.html.slim
+++ b/app/views/home/_facebook_form.html.slim
@@ -4,7 +4,7 @@
       input#facebook_id(
         type="text"
         ng-model="page.facebook_id"
-        placeholder= "Facebook page id. Example: 188091757763"
+        placeholder= "Example: 188091757763"
         ng-required
       )
 
