--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,7 +1,6 @@
 .index-container ng-controller="FacebookPagesController" ng-init="get_pages()"
   .row
-    .large-12.columns.header-container
-      h1 Facebook Pages Fetcher
-
+    .large-12.columns
+      h3 Please enter a Facebook Page ID to store it:
   = render "facebook_form"
   = render "facebook_pages_container"
