--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -4,6 +4,6 @@ nav.top-bar(data-topbar role="navigation")
       h1 = link_to "FetcherApp", "/"
 
   section.top-bar-section
-    ul.left
+    ul.right
       - if user_signed_in?
         li = link_to "Log out", destroy_user_session_path, method: :delete
