--- a/app/assets/stylesheets/landing_page.scss
+++ b/app/assets/stylesheets/landing_page.scss
@@ -3,6 +3,11 @@
   h1, h4, #facebook_login_button { text-align: center; }
 }
 
+.index-container {
+  padding: 100px 0px 100px 0px;
+  h3 { text-align: center; }
+}
+
 #new_facebook_page {
   input#facebook_id {
     margin-bottom: 1.25rem;
