--- a/app/views/facebook/pages/show.html.slim
+++ b/app/views/facebook/pages/show.html.slim
@@ -16,4 +16,4 @@
         p
           | {{ post.message }}
       small
-        | {{ post.created_time | fromNow }}
+        | {{ post.created_time | fromNo }}
