--- a/app/views/home/_facebook_pages_container.html.slim
+++ b/app/views/home/_facebook_pages_container.html.slim
@@ -1,7 +1,10 @@
-#stored-pages-container.row[ng-cloak]
-  .large-10.columns.large-offset-2
-    .facebook-page-item-container ng-repeat="page in pages"
-      img(ng-src="{{ page.profile_picture }}")
-      = link_to "facebook/pages/{{ page.id }}" do
-        h3
-          | {{ page.name }}
+.background-white
+  #stored-pages-container
+    .row[ng-cloak]
+      .large-12.columns
+        ul.facebook-pages-list
+          li.facebook-page-item-container ng-repeat="page in pages"
+            = link_to "facebook/pages/{{ page.id }}" do
+              img.th(ng-src="{{ page.profile_picture }}")
+              h3
+                | {{ page.name }}
