--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,6 +1,9 @@
 .index-container ng-controller="FacebookPagesController" ng-init="get_pages()"
-  .row
-    .large-12.columns
-      h3 Please enter a Facebook Page ID to store it:
-  = render "facebook_form"
+  .background-transparent
+    .overlay
+      .form-container
+        .row
+          .large-12.columns
+            h3 Please enter a Facebook Page ID to store it:
+        = render "facebook_form"
   = render "facebook_pages_container"
