Now added more functionality to improve the image rendering

--- a/app/assets/stylesheets/show_page.scss
+++ b/app/assets/stylesheets/show_page.scss
@@ -23,10 +23,10 @@
         a, p { display: inline-block; }
         p {
           max-width: 500px;
-          margin: 0px 0px 0px 30px;
           vertical-align: middle;
         }
         img { max-width: 100px; }
+        a { margin-right: 30px; }
         h6 {
           margin: 5px 0px 5px 0px;
           font-size: 0.8em;
