Enabled foundation and changed menu item color

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -10,6 +10,7 @@ $topbar-menu-link-color: black !default;
 $topbar-menu-icon-color: black !default;
 $topbar-link-bg-color-hover: gray !default;
 $topbar-link-bg-hover: gray !default;
+$topbar-dropdown-bg: white !default;
 
 
 @import "foundation/scss/normalize.scss";
