--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -2,6 +2,10 @@ nav.top-bar(data-topbar role="navigation")
   ul.title-area
     li.name
       h1 = link_to "FetcherApp", "/"
+    li.toggle-topbar.menu-icon
+      a(href="#")
+        span Menu
+
 
   section.top-bar-section
     ul.right
