--- a/app/views/home/_facebook_form.html.slim
+++ b/app/views/home/_facebook_form.html.slim
@@ -7,6 +7,11 @@
         placeholder= "Example: 188091757763"
         ng-required
       )
+      p.alert-box.alert ng-show="error"
+        | {{ error }}
+        = link_to "&times;".html_safe,
+          "#", class: "close",
+          "ng-click" => "error = null"
 
     .large-2.columns
       = submit_tag :add, class: "button expand"
