--- a/app/assets/stylesheets/show_page.scss
+++ b/app/assets/stylesheets/show_page.scss
@@ -1,12 +1,14 @@
+body {
+  -webkit-font-smoothing: antialiased;
+}
 .show-page-container {
   .page-headline {
     min-height: 100px;
     .headline-container {
-      img, h2 { display: inline-block; }
-      h2 {
+      img, h2, p { display: inline-block; }
+      h2, p {
         vertical-align: middle;
         color: white;
-        margin: 0px 0px 0px 30px;
       }
       padding: 30px 0px 30px 50px;
     }
