--- a/app/assets/stylesheets/show_page.scss
+++ b/app/assets/stylesheets/show_page.scss
@@ -6,9 +6,11 @@ body {
     min-height: 100px;
     .row {
       padding-top: 20px;
-      vertical-align: middle;
-      img, h2, p { display: inline-block; }
+      padding-left: 10px;
+      a, h2, p { display: inline-block; }
+      p { max-width: 650px; }
       h2, p {
+        padding-left: 10px;
         vertical-align: middle;
         color: white;
         margin: 0px;
