--- a/app/assets/stylesheets/landing_page.scss
+++ b/app/assets/stylesheets/landing_page.scss
@@ -10,6 +10,18 @@
   z-index: -100000
 }
 
+.top-bar-section {
+  ul.right {
+    li { img {
+        width: 40px;
+        margin-right: 5px;
+        -webkit-border-radius: 20px;
+        -moz-border-radius: 20px;
+        border-radius: 20px;
+    } }
+  }
+}
+
 .global-container {
   min-height: 400px;
 }
