--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -10,4 +10,9 @@ nav.top-bar(data-topbar role="navigation")
   section.top-bar-section
     ul.right
       - if user_signed_in?
-        li = link_to "Log out", destroy_user_session_path, method: :delete
+        li
+          = link_to "javascript:void(0)", class: 'profile-item' do
+            = image_tag current_user.image
+            | Hi #{current_user.name}!
+        li
+          = link_to "Log out", destroy_user_session_path, method: :delete
